Cleanup repository; migrate assignment to Markdown; update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.ko
 *.obj
 *.elf
+*.cyclo
 
 # Linker output
 *.ilk
@@ -50,17 +51,20 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
-*.cyclo
+.settings/language.settings.xml
+*.o
+*.elf
 *.list
-*.cyclo
-*.cyclo
-*.cyclo
-*.cyclo
+*.o
+*.o
+Debug/makefile
+/Release/
+Debug/Core/Src/main.cyclo
+*.o
+*.su
+*.elf
 *.list
-*.cyclo
-*.cyclo
-*.cyclo
+*.map
 
-**/Debug/**
-*~*
-/Debug/
+.settings/**
+Debug/**
